# geospatial_datascience_project

./: .gitattributes  AGENTS.md  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/countries/: countries.csv
data/crocodiles/: citations.txt  metadata.xml  multimedia.tsv  occurrence.tsv  rights.txt  verbatim.txt
data/crocodiles/dataset/: 004b9605-989f-4d7a-a6b4-821e0755c1e0.xml  013c9b9f-7b5b-4aff-914b-001660584d3f.xml  01598aee-87a8-4a95-83ec-263469faaf4d.xml  0159cf6b-6a46-4365-96f1-d7ca2511f082.xml  02242d2f-b43f-44d1-8e53-4c51af461f5b.xml  026af01f-d227-476f-9e81-d5273eca6a2b.xml  02e3058e-0c8e-49fb-bad6-138f0e3e80a0.xml  0310b080-ec4b-11dc-b73e-b8a03c50a862.xml  0354f54c-12a1-457c-a5dd-53386a0758fd.xml  040c5662-da76-4782-a48e-cdea1892d14c.xml  04169fce-7d4f-41f7-9dff-245960f5b59e.xml  047d726a-9d58-4a5f-9ffe-03ec50d4da13.xml  053d3e84-a440-42ae-a8ab-acda381469bb.xml  0645ccdb-e001-4ab0-9729-51f1755e007e.xml  0706a17e-359a-4cab-9b0b-f5e1554efa83.xml  080685f0-0df9-43dd-8bd7-eb82ca54b654.xml  083a4342-39f7-4fe0-a03c-d14ab3b9c5e2.xml  085a42b1-cc01-45c4-b21f-0a45833a8008.xml  08e03b4d-a30e-4dfd-978c-36712c7ccbd6.xml  09091176-bbe2-4077-9f4b-cfd555564160.xml  09c4287e-e6d5-4552-a07f-bff8a00833d8.xml  09d5405e-ca86-45f2-afa7-93cc707f54aa.xml  09e074a3-6385-454c-9dc8-bd52c56188de.xml  0b2df02a-3f94-464c-9e2f-3a82cb952bae.xml  0b7d7b92-b33a-4eba-ae40-1ef13b13ea6b.xml  0b91762f-b344-44ce-9087-f4c83f916eec.xml  0bf094c6-8a9a-4164-9902-f245920e016d.xml  0d8f74b3-42b9-488f-9ec1-1faefaff1d1c.xml  0da4d7df-17c2-47d3-b467-382953dd75e0.xml  0debafd0-6c8a-11de-8225-b8a03c50a862.xml  111a2d1e-0efb-4751-b502-78fa7420d3ac.xml  14114ed0-213a-481e-881e-2584e7272cea.xml  14222b05-ba75-4b41-abc6-fdc29d73c2bc.xml  14e51da8-2284-4fc6-8c9b-0146681910b9.xml  15b04450-0c60-11dd-84cd-b8a03c50a862.xml  1850e2cd-37d5-4c56-9927-a20cae8acdc4.xml  191cb056-d760-4b06-a7dd-ac247a45f05d.xml  1945093d-df49-4cc0-aee1-8c1af3cdc8c3.xml  19cb2741-a430-4139-8680-e11eba996978.xml  1a017764-ffb6-4880-801f-27e209a1f7e0.xml  (+591 more)
scripts/: convert_to_parquet.py
src/: app.py  components.py  config.py  styles.py  translations.py  visualization.py
